2000-06-16  Sven Wischnowsky  <wischnow@zsh.org>

	* 11938: Completion/Core/_description, Doc/Zsh/compsys.yo: enhance
 	ignore-line to ignore all/current/other word(s)
	
	* 11937: Completion/Core/_expand, Completion/Core/_list,
 	Doc/Zsh/compsys.yo, Doc/Zsh/mod_zutil.yo, Src/Modules/zutil.c:
 	zstyle -e option; change math-styles to boolean ones; change
 	defaults for _expand styles
	
2000-06-15  Peter Stephenson  <pws@cambridgesiliconradio.com>

	* Felix: 11908: Test/54compmatch.ztst: tests for problematic
	cases.

	* as 11916: moved bottom of ChangeLog to ChangeLog-Release to
	avoid unnecessary network activity when committing.  To be
	merged into ChangeLog.4.0 for next release.

2000-06-15  Sven Wischnowsky  <wischnow@zsh.org>

	* 11924: Src/Zle/compmatch.c: more security in completion matching
	
	* 11915: Completion/Core/_files, Doc/Zsh/compsys.yo: make _files
 	try each pattern only once (and stop after `*')
	
	* 11910: Src/Zle/computil.c: fix for _arguments, it took
 	non-option strings as options
	
2000-06-14  Peter Stephenson  <pws@pwstephenson.fsnet.co.uk>

	* 11906: Src/signals.c: yet another two bugs with saving traps:
	flags were prematurely restored when resetting and TRAPEXIT
	was sometimes saved incorrectly when exitting the scope.

2000-06-14  Oliver Kiddle  <opk@zsh.org>

	* 11903: Completion/Core/_expand: handle suffix style for arrays

2000-06-14  Peter Stephenson  <pws@cambridgesiliconradio.com>

	* 11902: Test/08traps.ztst: add test for localtraps with SIGWINCH.

	* 11901: Src/signals.c: not one but two more bugs in trap
	saving: sigfuncs wasn't reset for function signals, and dosavetrap()
	didn't check sigtrapped before assuming sigfuncs was valid.

	* 11895: Src/signals.c: exit traps weren't cleared from the
	list properly, resulting in memory management problems.

2000-06-14  Sven Wischnowsky  <wischnow@zsh.org>

	* 11885: Src/parse.c: nix kaboom with `time time'
	
	* 11890: Src/Zle/complist.c: better fix for menu selection on dumb 